<resources>
    <string name="app_name">VPT#006-YXN - Yes XOR No?   </string>
    <string name="anleitung">This app is for situations where you just cannot decide on rational grounds because of missing data or because the decision tree is so complex, a human could just flip a coin, because the computation of all outcomes would not be possible in the remaining life time. If you want to minimize the time you would normally lose in option paralysis, just press the big red button. The answer is a decisive and strict YES XOR NO. And there is also a delay to hinder you from fooling yourself and coming back to biased circles of fruitless thinking. But this is just what I think. Let me know what you think in the comments. ;) \n\n<b><font color="#efcac2">Everything is calculated locally, nothing is saved. Your data are yours. Nobody will ever learn about your specific love for wearing mismatched socks.</font></b>\n\n</string>

    <string name="LICENSE">
        Copyright 2024 Valentin\'s PowerTools\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.

    You should have received a copy of the GNU General Public License along with this program. If not, see\nhttps://www.gnu.org/licenses.\n\n Also here is the github link: https://github.com/v4lpt/YXN

    </string>
    <string name="copy">Copyright and License Information</string>

    <string name="infobuttontextforblinds">Information Button (gives you Information)</string>
    <string name="yes_xor_no">Yes XOR No?</string>
    <string name="infobuttonforblinds">info butt</string>
    <string name="app_name_show">Yes XOR No?</string>
    <string name="powertools">Valentin\'s PowerTools #006\n</string>
</resources>