<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444654">
    <TextView
        android:id="@+id/titleBar1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="#343541"
        android:fontFamily="monospace"
        android:gravity="center"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/powertools"
        android:textColor="#CCCCCC"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="304sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/titleBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleBar2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:background="#343541"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name_show"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar1" />

    <Space
        android:id="@+id/copyright_header_TW"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/explanationTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar2" />

    <TextView
        android:id="@+id/explanationTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="monospace"
        android:padding="13dp"
        android:text="@string/anleitung"
        android:textAlignment="inherit"
        android:textColor="#FFFFFF"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="4sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/choiceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyright_header_TW" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choiceButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FF0000"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="0dp"
        android:text="@string/yes_xor_no"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="35sp"
        app:autoSizeMinTextSize="4sp"
        app:autoSizeTextType="uniform"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanationTextView"
        app:layout_constraintBottom_toBottomOf="@id/space4"

        app:layout_constraintWidth_percent="0.8" />
    <Space
        android:id="@+id/space4"
        android:layout_width="0dp"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintBottom_toTopOf="@+id/infoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/choiceButton"
        app:layout_constraintTop_toBottomOf="@+id/choiceButton"
        android:layout_height="0dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/infobuttonforblinds"
        app:icon="@drawable/info"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        android:layout_marginTop="10dp"
        app:iconSize="24dp"
        app:iconTint="#FFFFFF"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="24dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:backgroundTint="@android:color/transparent"
        app:rippleColor="#33FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>